--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,16 +52,20 @@ jobs:
 
       - name: 🚀 Create .env file
         run: |
-
-          ssh -p "${{ secrets.DO_SSH_PORT }}" "${{ secrets.DO_SSH_USER }}@${{ secrets.DO_SSH_HOST }}" "mkdir -p ${DEPLOY_PATH}"
-          ssh -p "${{ secrets.DO_SSH_PORT }}" "${{ secrets.DO_SSH_USER }}@${{ secrets.DO_SSH_HOST }}" "cat > ${DEPLOY_PATH}/.env << 'EOF'
+          ssh -p "${{ secrets.DO_SSH_PORT }}" "${{ secrets.DO_SSH_USER }}@${{ secrets.DO_SSH_HOST }}" "
+            cd ${DEPLOY_PATH}
+            cat > .env << 'EOF'
           PORT=${{ secrets.PORT }}
-          MONGO_URI="mongodb://${{ secrets.MONGO_INITDB_ROOT_USERNAME }}:${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}@mongodb:27017/${{ secrets.MONGO_DB_NAME }}?authSource=admin"
+          MONGO_URI=mongodb://${{ secrets.MONGO_INITDB_ROOT_USERNAME }}:${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}@mongodb:27017/${{ secrets.MONGO_DB_NAME }}?authSource=admin
           JWT_SECRET=${{ secrets.JWT_SECRET }}
           MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
           MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
           MONGO_DB_NAME=${{ secrets.MONGO_DB_NAME }}
-          EOF"          
+          EOF
+            chmod 600 .env
+            echo '✅ Archivo .env creado exitosamente'
+            cat .env
+          "                  
 
       - name: 🚀 Deploy with Docker Compose
         run: |
